Fixed Section Title IMG overflows  on mobile devices

--- a/src/app/views/home/Home.scss
+++ b/src/app/views/home/Home.scss
@@ -21,6 +21,7 @@ body {
   section {
     min-height: 100vh;
     .section-title {
+      max-width: 100vw;
       height: 60px;
       width: auto;
       margin: 20px auto;
